# Sophos-Auto-Login

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
launchd/: com.office.sophos-auto-login.plist
src/sophos_auto_login/: __main__.py  config.py  connectivity.py  logger.py  portal.py  recorder.py  runner.py
